# taskai

./: CLAUDE.md  Cargo.toml  build.rs  install.sh  prd.md  release.sh
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  init.rs  mod.rs  next.rs  plan.rs  status.rs  task.rs
src/db/: connection.rs  dependency_repo.rs  document_repo.rs  migrations.rs  mod.rs  plan_repo.rs  task_repo.rs
src/graph/: cycle.rs  mod.rs  next_tasks.rs
src/models/: dependency.rs  document.rs  mod.rs  plan.rs  task.rs
src/output/: json.rs  text.rs
tests/: cli_integration.rs
